<resources>
    <string name="app_name">BeeSocial</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="emailaddress">Email Address</string>
    <string name="click_here_to_register">Click here to Register</string>
    <string name="click_here_to_login">Click Here to Login</string>
    <string name="username">Username</string>
    <string name="click_here_to_finish_registration">Click Here To Finish Registration</string>
    <string name="login">Login</string>
    <string name="new_users">New Users</string>
    <string name="forgot_login">Forgot Login?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="beesociallogo">BeeSocialLogo</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="title_activity_maps">Map</string>

</resources>
